<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoApartmentActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:padding="16dp"
        android:layout_gravity="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informacion_apartamento"
                android:textStyle="bold"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombreApartamento"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbl_nombre_apartamento"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:hint="@string/sin_info"
                android:textSize="16dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbl_tipo"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:hint="@string/sin_info"
                android:textSize="16dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbl_descripcion"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:hint="@string/sin_info"
                android:textSize="16dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbl_area"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:hint="@string/sin_info"
                android:textSize="16dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbl_direccion"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:hint="@string/sin_info"
                android:textSize="16dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textStyle="bold"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbl_valor"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:hint="@string/sin_info"
                android:textSize="16dp"
                android:gravity="center"/>

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:id="@+id/lbl_ImageApartment"
                android:layout_marginRight="20dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
